--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server/index.js",
-    "dev:full": "concurrently \"npm run server\" \"npm run dev\""
+    "server": "node --env-file=.env server/index.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
+    "db:init": "node --env-file=.env server/db/runDbInitSql.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -18,7 +20,9 @@
     "clsx": "^2.1.1",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^4.21.1",
+    "pg": "^8.16.3",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
